--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,5 @@
 {
-    "routes": [{ "src": "/[^.]+", "dest": "/", "status": 200 }]
+    "routes": [
+      { "src": "/(.*)\\.js(x)?", "dest": "/$1.js" }
+    ]
 }
