--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,3 @@
 {
-    "routes": [
-      { "src": "/(.*)\\.js(x)?", "dest": "/$1.js" }
-    ]
+    "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
