fix : vercel 설정 복원

--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,5 @@
 {
-    "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+    "routes": [
+      { "src": "/(.*)\\.js(x)?", "dest": "/$1.js" }
+    ]
 }
