fix :파일 속성 추가

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,14 @@
 {
     "routes": [
       { "src": "/(.*)\\.js(x)?", "dest": "/$1.js" }
+    ],
+
+    "headers": [
+        {
+            "source":"/*.jsx",
+            "headers":[
+                {"key":"Content-Type","value":"text/javascript"}
+            ]
+        }
     ]
 }
