fix : 배포 설정값 수정

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,5 @@
 {
-    "headers": [
-        {
-            "source":"/*.jsx",
-            "headers":[
-                {"key":"Content-Type","value":"text/javascript"}
-            ]
-        }
-    ]
+    "rewrites": [{ 
+        "source": "/(.*)",
+        "destination": "/" }]
 }
